--- a/catalog.html
+++ b/catalog.html
@@ -68,7 +68,7 @@
         </form>
 		<section class="items-list">
 			<article class="items">
-				<img src="#" width="368" height="204" alt="Набор для путешествий «Baxter of California»">
+				<img src="http://placehold.it/150x100" width="150" height="100" alt="Набор для путешествий «Baxter of California»">
 				<p>
 					Набор для путешествий</br>
 					«Baxter of California»
@@ -79,7 +79,7 @@
 				</div>
       		</article>
 			<article class="items">
-				<img src="#" width="368" height="204" alt="Увлажняющий кондиционер «Baxter of California»">
+				<img src="http://placehold.it/150x100" width="150" height="100" alt="Увлажняющий кондиционер «Baxter of California»">
 				<p>
 					Увлажняющий кондиционер</br>
 					«Baxter of California»
@@ -90,7 +90,7 @@
 				</div>
       		</article>
 			<article class="items">
-				<img src="#" width="368" height="204" alt="Гель для волос «SUAVECITO»">
+				<img src="http://placehold.it/150x100" width="150" height="100" alt="Гель для волос «SUAVECITO»">
 				<p>
 					Гель для волос</br>
 					«SUAVECITO»
@@ -101,7 +101,7 @@
 				</div>
       		</article>
 			<article class="items">
-				<img src="#" width="368" height="204" alt="Глина для укладки волос «American crew»">
+				<img src="http://placehold.it/150x100" width="150" height="100" alt="Глина для укладки волос «American crew»">
 				<p>
 					Глина для укладки волос</br>
 					«American crew»
@@ -112,7 +112,7 @@
 				</div>
       		</article>
 			<article class="items">
-				<img src="#" width="368" height="204" alt="Гель для волос «AMERICAN CREW»">
+				<img src="http://placehold.it/150x100" width="150" height="100" alt="Гель для волос «AMERICAN CREW»">
 				<p>
 					Гель для волос</br>
 					«AMERICAN CREW»
@@ -123,7 +123,7 @@
 				</div>
       		</article>
 			<article class="items">
-				<img src="#" width="368" height="204" alt="Набор для бритья «Baxter of California»">
+				<img src="http://placehold.it/150x100" width="150" height="100" alt="Набор для бритья «Baxter of California»">
 				<p>
 					Набор для бритья</br>
 					«Baxter of California»
