Закончил разметку страницы товара , добавил номера страниц в каталог

--- a/catalog.html
+++ b/catalog.html
@@ -134,6 +134,13 @@
 				</div>
       		</article>        
 		</section>
+		<section class="main-navigation">
+			<a class="figures" href="#">1</a>
+			<a class="figures" href="#">2</a>
+			<a class="figures" href="#">3</a>
+			<a class="figures" href="#">4</a>
+        </section>
+		<div>
     </main>
 	<footer class="main-footer">
       <div class="container">
