--- a/catalog-item.html
+++ b/catalog-item.html
@@ -42,9 +42,36 @@
 			<a href="#">НАБОР ДЛЯ ПУТЕШЕСТВИЙ «BAXTER OF CALIFORNIA»</a>
         </div>
 		
-		<section class="items-list">
-			        
+		<section class="items-gallery">
+		  <img src="http://placehold.it/250x250" width="250" height="250" alt="Набор для путешествий «Baxter of California» фото 1"> 
+		  <img src="http://placehold.it/100x100" width="100" height="100" alt="Набор для путешествий «Baxter of California» фото 2">
+		  <img src="http://placehold.it/100x100" width="100" height="100" alt="Набор для путешествий «Baxter of California» фото 3">
+		  <img src="http://placehold.it/100x100" width="100" height="100" alt="Набор для путешествий «Baxter of California» фото 4">
 		</section>
+		<div class="item-content">
+		  <p class="item-availability">ЕСТЬ В НАЛИЧИИ</p>
+		  <p class="item-article">Артикул: dexter-ae</p>
+		  <p class="item-specification">
+		    Travel Kit – необходимый аксессуар во время любого
+			путешествия. В аккуратной кожаной сумке находится все, что
+			нужно для бритья и ухода за кожей во время рабочей поездки
+			или отдыха: средство для умывания, увлажняющий крем, крем
+			для бритья, крем после бритья, шампунь. Набор также может
+			стать отличным подарком.
+		  </p>
+		  <div class="price-buy">
+		    <p>2 900 РУБ.</p>
+			<a href="#">КУПИТЬ</a>
+		  </div>
+		  <ul class="item-iside">
+		    <b>В НАБОР ВХОДЯТ:</b>
+			<li>СРЕДСТВО ДЛЯ УМЫВАНИЯ (50 МЛ)</li>
+			<li>УВЛАЖНЯЮЩИЙ КРЕМ (50 МЛ)</li>
+			<li>КРЕМ ДЛЯ БРИТЬЯ (50 МЛ)</li>
+			<li>КРЕМ ПОСЛЕ БРИТЬЯ, ШАМПУНЬ (50 МЛ)</li>
+			<li>УДОБНАЯ КОЖАНАЯ КОСМЕТИЧКА</li>
+		  </ul>
+		</div>
     </main>
 	<footer class="main-footer">
       <div class="container">
