Испрасил замечания согласно вебинару № 4

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -8,6 +8,7 @@
     <header class="main-header">
 		<div class="container">
 			<nav class="main-navigation">
+				<a href="#"><img src="http://placehold.it/100x100" width="111" height="24" alt="Логотип Барбершоп «Бородинский»">Логотип Барбершоп «Бородинский»</a>
 				<ul>
 					<li>
 					  <a href="#">Информация</a>
@@ -34,22 +35,21 @@
 		</div>
 	</header>
 	<main class="container">
-		<h1 class="title">НАБОР ДЛЯ ПУТЕШЕСТВИЙ «BAXTER OF CALIFORNIA»</h1>
-		<div class="breadcrumbs">
-            <a href="#">ГЛАВНАЯ</a>
-            <a class="active" href="#">МАГАЗИН</a>
-            <a href="#">СРЕДСТВА ДЛЯ УХОДА</a>
-			<a href="#">НАБОР ДЛЯ ПУТЕШЕСТВИЙ «BAXTER OF CALIFORNIA»</a>
-        </div>
-		
-		<section class="items-gallery">
+		<h1 class="title"><span class="item-type">Набор для путешествий</span> <span class="item-name">«Baxter of california»</span></h1>
+		<ul class="breadcrumbs">	
+      <li><a href="#">Главная</a></li>
+      <li><a class="active" href="#">Магазин</a></li>
+      <li><a href="#">Средства для ухода</a></li>
+			<li><a href="#"><span class="item-type">Набор для путешествий</span> <span class="item-name">«Baxter of california»</span></a></li>
+		</ul>
+    <section class="items-gallery">
 		  <img src="http://placehold.it/250x250" width="250" height="250" alt="Набор для путешествий «Baxter of California» фото 1"> 
 		  <img src="http://placehold.it/100x100" width="100" height="100" alt="Набор для путешествий «Baxter of California» фото 2">
 		  <img src="http://placehold.it/100x100" width="100" height="100" alt="Набор для путешествий «Baxter of California» фото 3">
 		  <img src="http://placehold.it/100x100" width="100" height="100" alt="Набор для путешествий «Baxter of California» фото 4">
 		</section>
 		<div class="item-content">
-		  <p class="item-availability">ЕСТЬ В НАЛИЧИИ</p>
+		  <p class="item-availability">Есть в наличии</p>
 		  <p class="item-article">Артикул: dexter-ae</p>
 		  <p class="item-specification">
 		    Travel Kit – необходимый аксессуар во время любого
@@ -61,23 +61,23 @@
 		  </p>
 		  <div class="price-buy">
 		    <p>2 900 РУБ.</p>
-			<a href="#">КУПИТЬ</a>
+			<a href="#">Купить</a>
 		  </div>
 		  <ul class="item-iside">
-		    <b>В НАБОР ВХОДЯТ:</b>
-			<li>СРЕДСТВО ДЛЯ УМЫВАНИЯ (50 МЛ)</li>
-			<li>УВЛАЖНЯЮЩИЙ КРЕМ (50 МЛ)</li>
-			<li>КРЕМ ДЛЯ БРИТЬЯ (50 МЛ)</li>
-			<li>КРЕМ ПОСЛЕ БРИТЬЯ, ШАМПУНЬ (50 МЛ)</li>
-			<li>УДОБНАЯ КОЖАНАЯ КОСМЕТИЧКА</li>
+		    <b>В набор входят:</b>
+			<li>Средство для умывания (50 мл)</li>
+			<li>Увлажняющий крем (50 мл)</li>
+			<li>Крем для бритья (50 мл)</li>
+			<li>Крем после бритья, шампунь (50 мл)</li>
+			<li>Удобная кожаная косметичка</li>
 		  </ul>
 		</div>
     </main>
 	<footer class="main-footer">
       <div class="container">
         <section class="footer-contacts">
-          Барбершоп «Бородинский»<br>
-          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+          Барбершоп «Бородинский»</br>
+          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8</br>
           <a href="#">Как нас найти?</a><br>
           Телефон: +7 (812) 666-02-66
         </section>
