Изменил обертку цен в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -100,7 +100,7 @@
 					</a>
 				</h2>
 				<div class="price-buy">
-					<p>2 900 РУБ.</p>
+					<span>2 900 РУБ.</span>
 					<a href="#">Купить</a>
 				</div>
       		</article>
@@ -113,7 +113,7 @@
 					</a>	
 				</h2>
 				<div class="price-buy">
-					<p>750 РУБ.</p>
+					<span>750 РУБ.</span>
 					<a href="#">КУПИТЬ</a>
 				</div>
       </article>
@@ -126,7 +126,7 @@
 					</a>	
 				</h2>
 				<div class="price-buy">
-					<p>290 РУБ.</p>
+					<span>290 РУБ.</span>
 					<a href="#">КУПИТЬ</a>
 				</div>
       		</article>
@@ -139,7 +139,7 @@
 					</a>
 				</h2>
 				<div class="price-buy">
-					<p>500 РУБ.</p>
+					<span>500 РУБ.</span>
 					<a href="#">КУПИТЬ</a>
 				</div>
       </article>
@@ -152,7 +152,7 @@
 					</a>
 				</h2>
 				<div class="price-buy">
-					<p>300 РУБ.</p>
+					<span>300 РУБ.</span>
 					<a href="#">КУПИТЬ</a>
 				</div>
       </article>
@@ -165,7 +165,7 @@
 					</a>
 				</h2>
 				<div class="price-buy">
-					<p>3 900 РУБ.</p>
+					<span>3 900 РУБ.</span>
 					<a href="#">КУПИТЬ</a>
 				</div>
       		</article>        
