Попытка сделать сетку на флексах

--- a/catalog.html
+++ b/catalog.html
@@ -7,10 +7,12 @@
   </head>
   <body>
     <header class="main-header">
-		<div class="container">
+		<div class="main-header-layout container">
 			<nav class="main-navigation">
-				<a href="#"><img src="http://placehold.it/100x100" width="111" height="24" alt="Логотип Барбершоп «Бородинский»">Логотип Барбершоп «Бородинский»</a>
-				<ul>
+				<div class=logo-header>
+					<a href="#"><img src="img/logoheader.png" width="111" height="24" alt="Логотип Барбершоп «Бородинский»"><span class="text-hidden">Логотип Барбершоп «Бородинский»</span></a>
+				</div>	
+				<ul class="text">
 					<li>
 					  <a href="#">Информация</a>
 					</li>
@@ -93,7 +95,7 @@
     </form>
 		<section class="items-list">
 			<article class="items">
-				<img src="http://placehold.it/150x150" width="150" height="100" alt="Набор для путешествий «Baxter of California»">
+				<img src="img/baxtertripshop.jpg" width="150" height="100" alt="Набор для путешествий «Baxter of California»">
 				<h2>
 					<a href=#>
 					<span class="item-type">Набор для путешествий</span>
@@ -106,7 +108,7 @@
 				</div>
       		</article>
 			<article class="items">
-				<img src="http://placehold.it/150x150" width="150" height="100" alt="Увлажняющий кондиционер «Baxter of California»">
+				<img src="img/baxtercondshop.jpg" width="150" height="100" alt="Увлажняющий кондиционер «Baxter of California»">
 				<h2>
 					<a href=#>
 						<span class="item-type">Увлажняющий кондиционер</span>
@@ -119,7 +121,7 @@
 				</div>
       </article>
 			<article class="items">
-				<img src="http://placehold.it/150x150" width="150" height="100" alt="Гель для волос «SUAVECITO»">
+				<img src="img/suavectoshop.jpg" width="150" height="100" alt="Гель для волос «SUAVECITO»">
 				<h2>
 					<a href=#>
 						<span class="item-type">Гель для волос</span>
@@ -132,7 +134,7 @@
 				</div>
       		</article>
 			<article class="items">
-				<img src="http://placehold.it/150x150" width="150" height="100" alt="Глина для укладки волос «American crew»">
+				<img src="img/amerikancrewshop.jpg" width="150" height="100" alt="Глина для укладки волос «American crew»">
 				<h2>
 					<a href="#">
 						<span class="item-type">Глина для укладки волос</span>
@@ -145,7 +147,7 @@
 				</div>
       </article>
 			<article class="items">
-				<img src="http://placehold.it/150x150" width="150" height="100" alt="Гель для волос «AMERICAN CREW»">
+				<img src="img/americancrewgelshop.jpg" width="150" height="100" alt="Гель для волос «AMERICAN CREW»">
 				<h2>
 					<a href="#">
 						<span class="item-type">Гель для волос</span>
@@ -158,7 +160,7 @@
 				</div>
       </article>
 			<article class="items">
-				<img src="http://placehold.it/150x150" width="150" height="100" alt="Набор для бритья «Baxter of California»">
+				<img src="img/baxtershavingshop.jpg" width="150" height="100" alt="Набор для бритья «Baxter of California»">
 				<h2>
 					<a href="#">
 						<span class="item-type">Набор для бритья</span>
