Разметил Хедер на флоатах

--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
 		<div class="main-header-layout container">
 			<nav class="main-navigation">
 				<div class=logo-header>
-					<a href="#"><img src="img/logoheader.png" width="111" height="24" alt="Логотип Барбершоп «Бородинский»"><span class="text-hidden">Логотип Барбершоп «Бородинский»</span></a>
+					<a href="#"><img class="block-photo" src="img/logoheader.png" width="111" height="24" alt="Логотип Барбершоп «Бородинский»"><span class="text-hidden">Логотип Барбершоп «Бородинский»</span></a>
 				</div>	
 				<ul class="text">
 					<li>
@@ -95,7 +95,7 @@
     </form>
 		<section class="items-list">
 			<article class="items">
-				<img src="img/baxtertripshop.jpg" width="150" height="100" alt="Набор для путешествий «Baxter of California»">
+				<img class="block-photo" src="img/baxtertripshop.jpg" width="150" height="100" alt="Набор для путешествий «Baxter of California»">
 				<h2>
 					<a href=#>
 					<span class="item-type">Набор для путешествий</span>
@@ -108,7 +108,7 @@
 				</div>
       		</article>
 			<article class="items">
-				<img src="img/baxtercondshop.jpg" width="150" height="100" alt="Увлажняющий кондиционер «Baxter of California»">
+				<img class="block-photo" src="img/baxtercondshop.jpg" width="150" height="100" alt="Увлажняющий кондиционер «Baxter of California»">
 				<h2>
 					<a href=#>
 						<span class="item-type">Увлажняющий кондиционер</span>
@@ -121,7 +121,7 @@
 				</div>
       </article>
 			<article class="items">
-				<img src="img/suavectoshop.jpg" width="150" height="100" alt="Гель для волос «SUAVECITO»">
+				<img class="block-photo" src="img/suavectoshop.jpg" width="150" height="100" alt="Гель для волос «SUAVECITO»">
 				<h2>
 					<a href=#>
 						<span class="item-type">Гель для волос</span>
@@ -134,7 +134,7 @@
 				</div>
       		</article>
 			<article class="items">
-				<img src="img/amerikancrewshop.jpg" width="150" height="100" alt="Глина для укладки волос «American crew»">
+				<img class="block-photo" src="img/amerikancrewshop.jpg" width="150" height="100" alt="Глина для укладки волос «American crew»">
 				<h2>
 					<a href="#">
 						<span class="item-type">Глина для укладки волос</span>
@@ -147,7 +147,7 @@
 				</div>
       </article>
 			<article class="items">
-				<img src="img/americancrewgelshop.jpg" width="150" height="100" alt="Гель для волос «AMERICAN CREW»">
+				<img class="block-photo" src="img/americancrewgelshop.jpg" width="150" height="100" alt="Гель для волос «AMERICAN CREW»">
 				<h2>
 					<a href="#">
 						<span class="item-type">Гель для волос</span>
@@ -160,7 +160,7 @@
 				</div>
       </article>
 			<article class="items">
-				<img src="img/baxtershavingshop.jpg" width="150" height="100" alt="Набор для бритья «Baxter of California»">
+				<img class="block-photo" src="img/baxtershavingshop.jpg" width="150" height="100" alt="Набор для бритья «Baxter of California»">
 				<h2>
 					<a href="#">
 						<span class="item-type">Набор для бритья</span>
