Начал оформление формы

--- a/catalog.html
+++ b/catalog.html
@@ -38,141 +38,145 @@
 		</div>
 	</header>
 	<main class="container">
-		<h1 class="title">Средства для ухода</h1>
+		<h1 class="title ">Средства для ухода</h1>
 		<ul class="breadcrumbs">
         <li><a href="#">Главная</a></li>
+				<li class="rhomb"></li>
         <li><a class="active" href="#">Магазин</a></li>
+				<li class="rhomb"></li>
         <li><a href="#">Средства для ухода</a></li>
-		</ul>			
-    <form action="#" method="get">
-      <fieldset class="producers">
-				<legend>Производители:</legend>
-				<ul>
-					<li>
-						<input type="checkbox" name="baxter" id="baxter-field" checked>
-						<label for="baxter-field">Baxter of California</label>
-					</li>	
-					<li>
-						<input type="checkbox" name="natty" id="natty-field">
-						<label for="natty-field">Mr Natty</label>
-					</li>
-					<li>	
-						<input type="checkbox" name="suavecito" id="suavecito-field" checked>
-						<label for="suavecito-field">Suavecito</label>
-					</li>
-					<li>	
-						<input type="checkbox" name="malin" id="malin-field">
-						<label for="malin-field">Malin+Goetz</label>
-					</li>	
-					<li>
-						<input type="checkbox" name="murray" id="murray-field">
-						<label for="murray-field">Murray’s</label>
-					</li>	
-					<li>
-						<input type="checkbox" name="americancrew" id="americancrew-field" checked>
-						<label for="americancrew-field">American Crew</label>
-					</li>	
-				</ul>
-			</fieldset>
-			<fieldset class="product-groups">
-				<legend>Группы товаров:</legend>
-				<ul>
-					<li>
-						<input type="radio" name="product-groups" id="shaving-accessories" value="shaving-accessories">
-						<label for="shaving-accessories">Бритвенные принадлежности</label>
-					</li>
-					<li>
-						<input type="radio" name="product-groups" id="care-funds" value="care-funds" checked>
-						<label for="care-funds">Средства для ухода</label>
-					</li>
-					<li>		
-						<input type="radio" name="product-groups" id="accessories" value="accessories">
-						<label for="accessories">Аксессуары</label>
-					</li>	
-				</ul>
-			</fieldset>
-      <input type="submit" value="ПОКАЗАТЬ">
-    </form>
-		<section class="items-list">
-			<article class="items">
-				<img class="block-photo" src="img/baxtertripshop.jpg" width="150" height="100" alt="Набор для путешествий «Baxter of California»">
-				<h2>
-					<a href=#>
-					<span class="item-type">Набор для путешествий</span>
-					<span class="item-name">«Baxter of California»</span>
-					</a>
-				</h2>
-				<div class="price-buy">
-					<span>2 900 РУБ.</span>
-					<a href="#">Купить</a>
-				</div>
-      		</article>
-			<article class="items">
-				<img class="block-photo" src="img/baxtercondshop.jpg" width="150" height="100" alt="Увлажняющий кондиционер «Baxter of California»">
-				<h2>
-					<a href=#>
-						<span class="item-type">Увлажняющий кондиционер</span>
+		</ul>
+		<div class="main-content">	
+			<form action="#" method="get">
+				<fieldset class="producers">
+					<legend>Производители:</legend>
+					<ul>
+						<li>
+							<input type="checkbox" name="baxter" id="baxter-field" checked>
+							<label for="baxter-field">Baxter of California</label>
+						</li>	
+						<li>
+							<input type="checkbox" name="natty" id="natty-field">
+							<label for="natty-field">Mr Natty</label>
+						</li>
+						<li>	
+							<input type="checkbox" name="suavecito" id="suavecito-field" checked>
+							<label for="suavecito-field">Suavecito</label>
+						</li>
+						<li>	
+							<input type="checkbox" name="malin" id="malin-field">
+							<label for="malin-field">Malin+Goetz</label>
+						</li>	
+						<li>
+							<input type="checkbox" name="murray" id="murray-field">
+							<label for="murray-field">Murray’s</label>
+						</li>	
+						<li>
+							<input type="checkbox" name="americancrew" id="americancrew-field" checked>
+							<label for="americancrew-field">American Crew</label>
+						</li>	
+					</ul>
+				</fieldset>
+				<fieldset class="product-groups">
+					<legend>Группы товаров:</legend>
+					<ul>
+						<li>
+							<input type="radio" name="product-groups" id="shaving-accessories" value="shaving-accessories">
+							<label for="shaving-accessories">Бритвенные принадлежности</label>
+						</li>
+						<li>
+							<input type="radio" name="product-groups" id="care-funds" value="care-funds" checked>
+							<label for="care-funds">Средства для ухода</label>
+						</li>
+						<li>		
+							<input type="radio" name="product-groups" id="accessories" value="accessories">
+							<label for="accessories">Аксессуары</label>
+						</li>	
+					</ul>
+				</fieldset>
+				<input type="submit" value="ПОКАЗАТЬ">
+			</form>
+			<section class="items-list">
+				<article class="items">
+					<img class="block-photo" src="img/baxtertripshop.jpg" width="150" height="100" alt="Набор для путешествий «Baxter of California»">
+					<h2>
+						<a href=#>
+						<span class="item-type">Набор для путешествий</span>
 						<span class="item-name">«Baxter of California»</span>
-					</a>	
-				</h2>
-				<div class="price-buy">
-					<span>750 РУБ.</span>
-					<a href="#">КУПИТЬ</a>
-				</div>
-      </article>
-			<article class="items">
-				<img class="block-photo" src="img/suavectoshop.jpg" width="150" height="100" alt="Гель для волос «SUAVECITO»">
-				<h2>
-					<a href=#>
-						<span class="item-type">Гель для волос</span>
-						<span class="item-name">«SUAVECITO»</span>
-					</a>	
-				</h2>
-				<div class="price-buy">
-					<span>290 РУБ.</span>
-					<a href="#">КУПИТЬ</a>
-				</div>
-      		</article>
-			<article class="items">
-				<img class="block-photo" src="img/amerikancrewshop.jpg" width="150" height="100" alt="Глина для укладки волос «American crew»">
-				<h2>
-					<a href="#">
-						<span class="item-type">Глина для укладки волос</span>
-						<span class="item-name">«American crew»</span>
-					</a>
-				</h2>
-				<div class="price-buy">
-					<span>500 РУБ.</span>
-					<a href="#">КУПИТЬ</a>
-				</div>
-      </article>
-			<article class="items">
-				<img class="block-photo" src="img/americancrewgelshop.jpg" width="150" height="100" alt="Гель для волос «AMERICAN CREW»">
-				<h2>
-					<a href="#">
-						<span class="item-type">Гель для волос</span>
-						<span class="item-name">«AMERICAN CREW»</span>
-					</a>
-				</h2>
-				<div class="price-buy">
-					<span>300 РУБ.</span>
-					<a href="#">КУПИТЬ</a>
-				</div>
-      </article>
-			<article class="items">
-				<img class="block-photo" src="img/baxtershavingshop.jpg" width="150" height="100" alt="Набор для бритья «Baxter of California»">
-				<h2>
-					<a href="#">
-						<span class="item-type">Набор для бритья</span>
-						<span class="item-name">«Baxter of California»</span>
-					</a>
-				</h2>
-				<div class="price-buy">
-					<span>3 900 РУБ.</span>
-					<a href="#">КУПИТЬ</a>
-				</div>
-      		</article>        
-		</section>
+						</a>
+					</h2>
+					<div class="price-buy">
+						<span>2 900 РУБ.</span>
+						<a href="#">Купить</a>
+					</div>
+						</article>
+				<article class="items">
+					<img class="block-photo" src="img/baxtercondshop.jpg" width="150" height="100" alt="Увлажняющий кондиционер «Baxter of California»">
+					<h2>
+						<a href=#>
+							<span class="item-type">Увлажняющий кондиционер</span>
+							<span class="item-name">«Baxter of California»</span>
+						</a>	
+					</h2>
+					<div class="price-buy">
+						<span>750 РУБ.</span>
+						<a href="#">КУПИТЬ</a>
+					</div>
+				</article>
+				<article class="items">
+					<img class="block-photo" src="img/suavectoshop.jpg" width="150" height="100" alt="Гель для волос «SUAVECITO»">
+					<h2>
+						<a href=#>
+							<span class="item-type">Гель для волос</span>
+							<span class="item-name">«SUAVECITO»</span>
+						</a>	
+					</h2>
+					<div class="price-buy">
+						<span>290 РУБ.</span>
+						<a href="#">КУПИТЬ</a>
+					</div>
+						</article>
+				<article class="items">
+					<img class="block-photo" src="img/amerikancrewshop.jpg" width="150" height="100" alt="Глина для укладки волос «American crew»">
+					<h2>
+						<a href="#">
+							<span class="item-type">Глина для укладки волос</span>
+							<span class="item-name">«American crew»</span>
+						</a>
+					</h2>
+					<div class="price-buy">
+						<span>500 РУБ.</span>
+						<a href="#">КУПИТЬ</a>
+					</div>
+				</article>
+				<article class="items">
+					<img class="block-photo" src="img/americancrewgelshop.jpg" width="150" height="100" alt="Гель для волос «AMERICAN CREW»">
+					<h2>
+						<a href="#">
+							<span class="item-type">Гель для волос</span>
+							<span class="item-name">«AMERICAN CREW»</span>
+						</a>
+					</h2>
+					<div class="price-buy">
+						<span>300 РУБ.</span>
+						<a href="#">КУПИТЬ</a>
+					</div>
+				</article>
+				<article class="items">
+					<img class="block-photo" src="img/baxtershavingshop.jpg" width="150" height="100" alt="Набор для бритья «Baxter of California»">
+					<h2>
+						<a href="#">
+							<span class="item-type">Набор для бритья</span>
+							<span class="item-name">«Baxter of California»</span>
+						</a>
+					</h2>
+					<div class="price-buy">
+						<span>3 900 РУБ.</span>
+						<a href="#">КУПИТЬ</a>
+					</div>
+						</article>        
+			</section>
+		</div>	
 		<section class="main-navigation">
 			<a class="figures" href="#">1</a>
 			<a class="figures" href="#">2</a>
